--- a/Client/Pages/Master Data/Components/JenisPermintaan/View-jenis-permintaan.razor
+++ b/Client/Pages/Master Data/Components/JenisPermintaan/View-jenis-permintaan.razor
@@ -14,21 +14,21 @@
     <div class="col-12 mt-4">
         <div class="d-flex justify-content-end">
             <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formJenisPermintaan"
-                onClick="HandleAddJenisPermintaan" />
-        </div>
-        <div>
-            <Table table=@table HandleClickPrevious="Previous" HandleClickNext="Next"
-                HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
-                totalCountData="JenisPermintaanService.JenisPermintaans.totalCountData"
-                HandleEditBtn="HandleEditBtnJenisPermintaan" IsModalEdit modalEditNameId="formJenisPermintaan"
-                HandleDeleteBtn="HandleDeleteJenisPermintaan" />
-        </div>
-    </div>
-</div>
+                 onClick="HandleAddJenisPermintaan" />
+         </div>
+         <div>
+             <Table table=@table HandleClickPrevious="Previous" HandleClickNext="Next"
+                 HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
+                 totalCountData="JenisPermintaanService.JenisPermintaans.totalCountData"
+                 HandleEditBtn="HandleEditBtnJenisPermintaan" IsModalEdit modalEditNameId="formJenisPermintaan"
+                 HandleDeleteBtn="HandleDeleteJenisPermintaan" />
+         </div>
+     </div>
+ </div>
 
-<Form_jenis_permintaan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+ <Form_jenis_permintaan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
-@code {
+ @code {
 
     private JenisPermintaan formData = new JenisPermintaan();
     private async void HandleEditBtnJenisPermintaan(string id)
@@ -145,6 +145,7 @@
                 var rowData = new List<object>
 {
 item.Id.ToString(),
+item.Id.ToString(),
 item.Name,
 };
 
@@ -153,6 +154,7 @@ item.Name,
 
             table.Headers = new List<string>
 {
+"ID",
 "Name"
 };
         }
