--- a/Client/Pages/Master Data/Components/Sumber Pemenuhan/View-sumber-pemenuhan.razor
+++ b/Client/Pages/Master Data/Components/Sumber Pemenuhan/View-sumber-pemenuhan.razor
@@ -14,21 +14,21 @@
     <div class="col-12 mt-4">
         <div class="d-flex justify-content-end">
             <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formSumberPemenuhan"
-                onClick="HandleAddSumberPemenuhan" />
-        </div>
-        <div>
-            <Table table=@table HandleClickPrevious=" Previous" HandleClickNext="Next"
-                HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
-                totalCountData="SumberPemenuhanService.SumberPemenuhans.totalCountData"
-                HandleEditBtn="HandleEditBtnSumberPemenuhan" IsModalEdit modalEditNameId="formSumberPemenuhan"
-                HandleDeleteBtn="HandleDeleteSumberPemenuhan" />
-        </div>
-    </div>
-</div>
+                 onClick="HandleAddSumberPemenuhan" />
+         </div>
+         <div>
+             <Table table=@table HandleClickPrevious=" Previous" HandleClickNext="Next"
+                 HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
+                 totalCountData="SumberPemenuhanService.SumberPemenuhans.totalCountData"
+                 HandleEditBtn="HandleEditBtnSumberPemenuhan" IsModalEdit modalEditNameId="formSumberPemenuhan"
+                 HandleDeleteBtn="HandleDeleteSumberPemenuhan" />
+         </div>
+     </div>
+ </div>
 
-<Form_sumber_pemenuhan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+ <Form_sumber_pemenuhan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
-@code {
+ @code {
 
     private SumberPemenuhan formData = new SumberPemenuhan();
     private async void HandleEditBtnSumberPemenuhan(string id)
@@ -146,6 +146,7 @@
                 var rowData = new List<object>
 {
 item.Id.ToString(),
+item.Id.ToString(),
 item.Name,
 };
 
@@ -154,6 +155,7 @@ item.Name,
 
             table.Headers = new List<string>
 {
+"ID",
 "Name"
 };
         }
