--- a/Client/Pages/Master Data/Components/Departemen/View-departemen.razor
+++ b/Client/Pages/Master Data/Components/Departemen/View-departemen.razor
@@ -145,6 +145,7 @@
                 var rowData = new List<object>
 {
 item.Id.ToString(),
+item.Id.ToString(),
 item.Name,
 };
 
@@ -153,6 +154,7 @@ item.Name,
 
             table.Headers = new List<string>
 {
+"ID",
 "Name"
 };
         }
