--- a/Client/Pages/Master Data/Components/Golongan/View-golongan.razor
+++ b/Client/Pages/Master Data/Components/Golongan/View-golongan.razor
@@ -144,6 +144,7 @@
                 var rowData = new List<object>
 {
 item.Id.ToString(),
+item.Id.ToString(),
 item.Name,
 };
 
@@ -152,6 +153,7 @@ item.Name,
 
             table.Headers = new List<string>
 {
+"ID",
 "Name"
 };
         }
