--- a/Client/Pages/Master Data/Components/JenisMpp/View-jenis-mpp.razor
+++ b/Client/Pages/Master Data/Components/JenisMpp/View-jenis-mpp.razor
@@ -14,20 +14,20 @@
     <div class="col-12 mt-4">
         <div class="d-flex justify-content-end">
             <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formJenisMpp"
-                onClick="HandleAddJenisMpp" />
-        </div>
-        <div>
-            <Table table=@table HandleClickPrevious="Previous" HandleClickNext="Next"
-                HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
-                totalCountData="JenisMppService.JenisMpps.totalCountData" HandleEditBtn="HandleEditBtnJenisMpp"
-                IsModalEdit modalEditNameId="formJenisMpp" HandleDeleteBtn="HandleDeleteJenisMpp" />
-        </div>
-    </div>
-</div>
+                 onClick="HandleAddJenisMpp" />
+         </div>
+         <div>
+             <Table table=@table HandleClickPrevious="Previous" HandleClickNext="Next"
+                 HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
+                 totalCountData="JenisMppService.JenisMpps.totalCountData" HandleEditBtn="HandleEditBtnJenisMpp"
+                    IsModalEdit modalEditNameId="formJenisMpp" HandleDeleteBtn="HandleDeleteJenisMpp" />
+         </div>
+     </div>
+ </div>
 
-<Form_jenis_mpp Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+ <Form_jenis_mpp Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
-@code {
+ @code {
 
     private JenisMpp formData = new JenisMpp();
     private async void HandleEditBtnJenisMpp(string id)
@@ -144,6 +144,7 @@
                 var rowData = new List<object>
 {
 item.Id.ToString(),
+item.Id.ToString(),
 item.Name,
 };
 
@@ -152,6 +153,7 @@ item.Name,
 
             table.Headers = new List<string>
 {
+"ID",
 "Name"
 };
         }
