--- a/Client/Pages/Pengajuan MPP/Components/Kualifikasi-MPP.razor
+++ b/Client/Pages/Pengajuan MPP/Components/Kualifikasi-MPP.razor
@@ -1,5 +1,6 @@
 <div class="row">
     <div>Kualifikasi MPP</div>
+    <Button onClick="Check" />
     @if (AppliationState.MppChildForm != null && AppliationState.MppChildForm.PosisiId != null)
     {
         <div>@(AppliationState.MppChildForm.PosisiId)</div>
@@ -9,4 +10,9 @@
 @code {
     [CascadingParameter]
     public AppState AppliationState { get; set; }
+
+    private void Check()
+    {
+        Console.WriteLine(AppliationState.MppChildForm.PosisiId);
+    }
 }
