--- a/Client/Shared/Widget/Input.razor
+++ b/Client/Shared/Widget/Input.razor
@@ -1,7 +1,7 @@
 <div class="form-group">
     <label class="form-label @(errorText != ""? "text-danger":"") @(bold?"fw-bold":"")">@label</label>
     <input type="@type" class="form-control @(errorText != "" ? "is-invalid" : "")" @bind-value="@value"
-        placeholder="@placeholder" disabled="@disabled" />
+        placeholder="@placeholder" disabled="@disabled" @oninput="HandleInputChange" />
 
     <div class="col-auto">
         <span class="form-text text-danger">
@@ -16,9 +16,9 @@
     [Parameter]
     public string? label { get; set; }
     [Parameter]
-    public string? value { get; set; }
+    public string? name { get; set; }
     [Parameter]
-    public EventCallback<string> valueChanged { get; set; }
+    public string? value { get; set; }
     [Parameter]
     public string errorText { get; set; } = "";
     [Parameter]
@@ -27,4 +27,20 @@
     public bool bold { get; set; } = false;
     [Parameter]
     public bool disabled { get; set; } = false;
+    [Parameter]
+    public EventCallback<SelectChangedEventArgs> OnInput { get; set; }
+
+    private async Task HandleInputChange(ChangeEventArgs e)
+    {
+        string selectedValue = e.Value?.ToString() ?? string.Empty; // Get the selected value
+
+        var args = new SelectChangedEventArgs
+            {
+                Name = name ?? string.Empty,
+                Value = selectedValue
+            };
+
+        // Invoke the OnInput event with the SelectChangedEventArgs instance
+        await OnInput.InvokeAsync(args);
+    }
 }
